--- a/index.html
+++ b/index.html
@@ -5,10 +5,27 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>단어 플래시카드 시험지</title>
     <link rel="stylesheet" href="style.css" />
+    <!-- Firebase SDK 추가 -->
+    <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-analytics-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.8.0/firebase-auth-compat.js"></script>
   </head>
   <body>
+    <!-- 로그인 화면 -->
+    <div id="auth-container" class="container auth-container">
+      <h1 class="title">단어 플래시카드</h1>
+      <div class="auth-form">
+        <button id="googleLoginBtn" class="google-btn">
+          <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" alt="Google" />
+          Google 계정으로 로그인
+        </button>
+        <div id="auth-error" class="auth-error"></div>
+      </div>
+    </div>
+
     <!-- 모드 선택 화면 -->
-    <div id="mode-selector" class="container mode-selector">
+    <div id="mode-selector" class="container mode-selector" style="display:none;">
       <h1 class="title">단어 플래시카드</h1>
       <p class="subtitle">학습 모드를 선택하세요</p>
 
@@ -20,16 +37,18 @@
       <div class="mode-info">
         <span id="total-count">총 0개 단어</span>
       </div>
+
+      <button id="logoutBtn" class="logout-btn">로그아웃</button>
     </div>
 
-    <!-- 카드 학습 화면 (기존 코드) -->
+    <!-- 카드 학습 화면 -->
     <div id="study-container" class="container" style="display:none;">
       <div class="header-controls">
         <div id="counter" class="counter"></div>
         <button id="backToModeBtn" class="back-btn">◀ 모드 선택</button>
       </div>
 
-      <!-- 통계 정보 영역 추가 -->
+      <!-- 통계 정보 영역 -->
       <div id="stats" class="stats">
         <span id="stats-correct" class="stats-item">맞춤: 0</span>
         <span id="stats-wrong" class="stats-item">틀림: 0</span>
@@ -54,10 +73,17 @@
         <button id="nextBtn" class="nav">→</button>
       </div>
 
-      <!-- 통계 초기화 버튼 추가 -->
+      <!-- 통계 초기화 버튼 -->
       <button id="resetStatsBtn" class="reset-btn">통계 초기화</button>
     </div>
 
+    <!-- 로딩 인디케이터 -->
+    <div id="loading" class="loading" style="display: none;">
+      <div class="spinner"></div>
+      <p>데이터를 불러오는 중...</p>
+    </div>
+
+    <script src="firebase-config.js"></script>
     <script src="script.js" defer></script>
   </body>
 </html>
